# uv-forge

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  SECURITY.md  copier.yml  pyproject.toml  renovate.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  linkcheck.yml
docs/: conf.py  contributing.md  external-services.md  getting-started.md  index.md  nox-sessions.md  options.md  overview.md  releasing.md  requirements.txt  security.md  updating.md  whats-included.md
docs/_static/: custom.css
template/: .copier-answers.yml.jinja  .pre-commit-config.yaml  CONTRIBUTING.md.jinja  README.md.jinja  noxfile.py.jinja  pyproject.toml.jinja  {% if extension == 'mypyc' %}setup.py{% endif %}.jinja  {% if license == 'Apache-2.0' %}LICENSE{% endif %}.jinja  {% if license == 'GPL-3.0' %}LICENSE{% endif %}.jinja  {% if license == 'MIT' %}LICENSE{% endif %}.jinja
template/.github/workflows/: linkcheck.yml  {% if docs_host == 'github-pages' %}docs.yml{% endif %}  {% if extension != 'mypyc' %}release.yml{% endif %}.jinja  {% if extension == 'mypyc' %}release.yml{% endif %}.jinja
template/docs/: conf.py.jinja  index.md.jinja  reference.md.jinja  requirements.txt  usage.md.jinja
template/src/{{ package_name }}/: __init__.py.jinja  __main__.py.jinja  core.py.jinja
template/tests/: __init__.py.jinja  test_core.py.jinja  test_main.py.jinja
tests/: conftest.py  test_template.py
